app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --background: 1 0 0;
    --foreground: 0.145 0 0;
    --card: 1 0 0;
    --card-foreground: 0.145 0 0;
    --popover: 1 0 0;
    --popover-foreground: 0.145 0 0;
    --primary: 0.205 0 0;
    --primary-foreground: 0.985 0 0;
    --secondary: 0.97 0 0;
    --secondary-foreground: 0.205 0 0;
    --muted: 0.97 0 0;
    --muted-foreground: 0.556 0 0;
    --accent: 0.97 0 0;
    --accent-foreground: 0.205 0 0;
    --destructive: 0.577 0.245 27.325;
    --border: 0.922 0 0;
    --input: 0.922 0 0;
    --ring: 0.708 0 0;
    --chart-1: 0.809 0.105 251.813;
    --chart-2: 0.623 0.214 259.815;
    --chart-3: 0.546 0.245 262.881;
    --chart-4: 0.488 0.243 264.376;
    --chart-5: 0.424 0.199 265.638;
    --radius: 0.625rem;
    --sidebar: 0.985 0 0;
    --sidebar-foreground: 0.145 0 0;
    --sidebar-primary: 0.205 0 0;
    --sidebar-primary-foreground: 0.985 0 0;
    --sidebar-accent: 0.97 0 0;
    --sidebar-accent-foreground: 0.205 0 0;
    --sidebar-border: 0.922 0 0;
    --sidebar-ring: 0.708 0 0;
  }
  .dark {
    --background: 0.145 0 0;
    --foreground: 0.985 0 0;
    --card: 0.205 0 0;
    --card-foreground: 0.985 0 0;
    --popover: 0.205 0 0;
    --popover-foreground: 0.985 0 0;
    --primary: 0.922 0 0;
    --primary-foreground: 0.205 0 0;
    --secondary: 0.269 0 0;
    --secondary-foreground: 0.985 0 0;
    --muted: 0.269 0 0;
    --muted-foreground: 0.708 0 0;
    --accent: 0.269 0 0;
    --accent-foreground: 0.985 0 0;
    --destructive: 0.704 0.191 22.216;
    --border: 1 0 0;
    --input: 1 0 0;
    --ring: 0.556 0 0;
    --chart-1: 0.809 0.105 251.813;
    --chart-2: 0.623 0.214 259.815;
    --chart-3: 0.546 0.245 262.881;
    --chart-4: 0.488 0.243 264.376;
    --chart-5: 0.424 0.199 265.638;
    --sidebar: 0.205 0 0;
    --sidebar-foreground: 0.985 0 0;
    --sidebar-primary: 0.488 0.243 264.376;
    --sidebar-primary-foreground: 0.985 0 0;
    --sidebar-accent: 0.269 0 0;
    --sidebar-accent-foreground: 0.985 0 0;
    --sidebar-border: 1 0 0;
    --sidebar-ring: 0.556 0 0;
  }
  .theme {
    --font-sans: var(--font-sans);
  }
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
  html {
    @apply font-sans;
  }
}

